src/objects/Trail__c.object
<CustomObject>
    <description>Trail Information of a park.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the park trail.</description>
        <inlineHelpText>Description about the trail.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Total distance of the trail</description>
        <inlineHelpText>Total distance of the trail</inlineHelpText>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <description>Date on which the trail was last inspected.</description>
        <inlineHelpText>Tells the last inspection date of the trail.</inlineHelpText>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>